PN-14542: add featureFlag to override pec and add endpoint parameter for templates with actual path as default